--- a/tools/chou.html
+++ b/tools/chou.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>随机抽人</title>
+    <title>网页来自九六班李沅臻-原神随机抽人</title>
     
     <!-- 引入 Font Awesome 图标库，水印样式依赖于此 -->
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
